--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -42,6 +42,7 @@ dependencies:
   youtube_player_flutter: ^9.1.1
   flutter_inappwebview: ^6.1.5
   connectivity_plus: ^6.1.4
+  just_audio: ^0.10.4
 
 dev_dependencies:
   flutter_test:
@@ -73,6 +74,7 @@ flutter:
   - assets/images/
   - assets/videos/
   - assets/videos/Kids_song.mp4
+  - assets/audios/
   #   - images/a_dot_ham.jpeg
 
   # An image asset can refer to one or more resolution-specific "variants", see
