Changes in UI, Changes in Ux, Appbars, And Animations

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -43,6 +43,8 @@ dependencies:
   flutter_inappwebview: ^6.1.5
   connectivity_plus: ^6.1.4
   just_audio: ^0.10.4
+  confetti: ^0.8.0
+  shimmer: ^3.0.0
 
 dev_dependencies:
   flutter_test:
