--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -45,6 +45,7 @@ dependencies:
   just_audio: ^0.10.4
   confetti: ^0.8.0
   shimmer: ^3.0.0
+  flutter_tts: ^4.2.3
 
 dev_dependencies:
   flutter_test:
