--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -40,7 +40,6 @@ dependencies:
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.8
   shared_preferences: ^2.5.3
-  flutter_vlc_player: ^7.4.2
   youtube_player_flutter: ^9.1.1
   flutter_inappwebview: ^6.1.5
   connectivity_plus: ^6.1.4
@@ -54,6 +53,9 @@ dependencies:
   package_info_plus: ^8.3.0
   flutter_launcher_icons: ^0.14.4
   lottie: ^3.3.1
+  fl_chart: ^0.71.0
+  flutter_vlc_player: ^7.4.2
+
 
 flutter_launcher_icons:
     android: "launcher_icon"
