--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -32,7 +32,7 @@ dependencies:
     sdk: flutter
   flutter_localizations:
     sdk: flutter
-  intl: ^0.19.0
+  intl: ^0.20.2
 
 
 
@@ -55,6 +55,7 @@ dependencies:
   lottie: ^3.3.1
   fl_chart: ^0.71.0
   flutter_vlc_player: ^7.4.2
+  flutter_colorpicker: ^1.1.0
 
 
 flutter_launcher_icons:
