--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -32,7 +32,7 @@ dependencies:
     sdk: flutter
   flutter_localizations:
     sdk: flutter
-  intl: ^0.19.0
+  intl: ^0.20.2
 
 
 
@@ -108,6 +108,8 @@ flutter:
   - assets/images/Banners/Islamic/
   - assets/images/Banners/CuteBr/
   - assets/images/Banners/Joyful/
+  - assets/images/UI/Buttons/
+  - assets/images/UI/BackGrounds/
 
     #Videos
   - assets/videos/
@@ -118,12 +120,15 @@ flutter:
   - assets/audios/sound_effects/
   - assets/audios/sound_track/
   - assets/audios/piano_notes/
+  - assets/audios/QuizGame_Sounds/
   #Fonts
   - assets/fonts/ComicNeue-Regular.ttf
   - assets/fonts/ComicNeue-Bold.ttf
   #Animations
   - assets/animations/
   - assets/animations/AnimatedAvatars/
+  - assets/animations/QuizzGame_Animation/
+  - assets/animations/LvlUnlocked/
 
 
   #   - images/a_dot_ham.jpeg
