--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -32,7 +32,7 @@ dependencies:
     sdk: flutter
   flutter_localizations:
     sdk: flutter
-  intl: ^0.19.0
+  intl: ^0.20.2
 
 
 
@@ -105,6 +105,7 @@ flutter:
   - assets/images/AvatarImage/
   - assets/images/AvatarImage/Beams/
   - assets/images/AvatarImage/Aliens/
+  - assets/images/AvatarImage/Babies/
   - assets/images/badges/
   - assets/images/Banners/
   - assets/images/Banners/Sci_FI_Banners/
