--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -60,6 +60,7 @@ dependencies:
   percent_indicator: ^4.2.5
   in_app_purchase: ^3.2.3
   font_awesome_flutter: ^10.8.0
+  vibration: ^3.1.3
 
 
 flutter_launcher_icons:
@@ -134,6 +135,8 @@ flutter:
   - assets/audios/QuizGame_Sounds/
   - assets/audios/tts_female/
   - assets/audios/tts_female/Wudu/
+  - assets/audios/UI_Audio/SFX_Audio/
+  - assets/audios/UI_Audio/ButtonSounds/
   #Fonts
   - assets/fonts/ComicNeue-Regular.ttf
   - assets/fonts/ComicNeue-Bold.ttf
