--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -61,6 +61,7 @@ dependencies:
   in_app_purchase: ^3.2.3
   font_awesome_flutter: ^10.8.0
   vibration: ^3.1.3
+  gsheets: ^0.5.0
 
 
 flutter_launcher_icons:
@@ -101,6 +102,7 @@ flutter:
   #Images
   - assets/images/
   - assets/images/Sketches/
+  - assets/icons/
   - assets/images/GameGridImages/
   - assets/images/PractiseImage/
   - assets/images/PractiseImage/HeavyLightImages/
