--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -62,6 +62,7 @@ dependencies:
   font_awesome_flutter: ^10.8.0
   vibration: ^3.1.3
   gsheets: ^0.5.0
+  flutter_staggered_animations: ^1.1.1
 
 
 flutter_launcher_icons:
@@ -139,6 +140,7 @@ flutter:
   - assets/audios/UI_Audio/SFX_Audio/
   - assets/audios/UI_Audio/ButtonSounds/
   - assets/audios/BackGround_Audio/
+  - assets/audios/SplashScreen_Audio/
   #Fonts
   - assets/fonts/ComicNeue-Regular.ttf
   - assets/fonts/ComicNeue-Bold.ttf
