--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -65,6 +65,9 @@ dependencies:
   flutter_staggered_animations: ^1.1.1
   cloud_firestore: ^6.0.0
   firebase_core: ^4.0.0
+  firebase_auth: ^6.0.0
+  uuid: ^4.5.1
+  nanoid: ^1.0.0
 
 
 flutter_launcher_icons:
