--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -67,7 +67,8 @@ dependencies:
   firebase_core: ^4.0.0
   firebase_auth: ^6.0.0
   uuid: ^4.5.1
-  nanoid: ^1.0.0
+  google_sign_in: ^6.1.0
+  hive: ^2.2.3
 
 
 flutter_launcher_icons:
@@ -161,6 +162,7 @@ flutter:
   - assets/animations/QuizzGame_Animation/
   - assets/animations/LvlUnlocked/
   - assets/animations/UIBannerAnimations/
+  - assets/animations/FirstTouchAnimations/
 
 
   #   - images/a_dot_ham.jpeg
