--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -54,14 +54,11 @@ dependencies:
   flutter_launcher_icons: ^0.14.4
   lottie: ^3.3.1
   fl_chart: ^0.71.0
-  flutter_vlc_player: ^7.4.2
   flutter_colorpicker: ^1.1.0
   google_mobile_ads: ^6.0.0
   percent_indicator: ^4.2.5
   in_app_purchase: ^3.2.3
   font_awesome_flutter: ^10.8.0
-  vibration: ^3.1.3
-  gsheets: ^0.5.0
   flutter_staggered_animations: ^1.1.1
   cloud_firestore: ^6.0.0
   firebase_core: ^4.0.0
@@ -69,6 +66,7 @@ dependencies:
   uuid: ^4.5.1
   google_sign_in: ^6.1.0
   hive: ^2.2.3
+  flutter_vlc_player: ^7.4.3
 
 
 flutter_launcher_icons:
@@ -139,6 +137,7 @@ flutter:
   - assets/images/UI/utilities/
   - assets/images/Puzz/PuzzMainImages/
   - assets/images/Puzz/Puzz1/Puzz1_3x3/
+  - assets/images/PetImages/
 
     #Videos
 
