Hezz2Game/ UnoGame/ MazeGame/ LinkColorGame

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -152,6 +152,7 @@ flutter:
   - assets/images/UI/utilities/MemoryFlip_images/ItalianFood/
   - assets/images/UI/utilities/MemoryFlip_images/Sushi/
   - assets/images/UI/utilities/MemoryFlip_images/Vegetables/
+  - assets/images/cards/
 
     #Videos
 
