--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -70,6 +70,9 @@ dependencies:
   flutter_keyboard_visibility: ^6.0.0
   marquee: ^2.3.0
   share_plus: ^11.1.0
+  web_socket_channel: ^3.0.3
+  firebase_database: ^12.0.0
+  network_info_plus: ^6.1.4
 
 flutter_launcher_icons:
     android: "launcher_icon"
