--- a/ios/Runner/GoogleService-Info.plist
+++ b/ios/Runner/GoogleService-Info.plist
@@ -15,7 +15,7 @@
 	<key>PLIST_VERSION</key>
 	<string>1</string>
 	<key>BUNDLE_ID</key>
-	<string>com.example.mortaalim</string>
+	<string>com.jalnix.moortaalim</string>
 	<key>PROJECT_ID</key>
 	<string>moortaalim-58b73</string>
 	<key>STORAGE_BUCKET</key>
