--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -77,8 +77,12 @@ dependencies:
 flutter_launcher_icons:
     android: "launcher_icon"
     ios: true
-    image_path: "assets/icons/logo3.png"
+    image_path: "assets/icons/MoorTaalimLogo.png"
     min_sdk_android: 21 # android min sdk min:16, default 21
+    adaptive_icon_foreground: "assets/icons/MoorTaalimLogo.png"
+    adaptive_icon_background: "#ffffff"
+
+
 
 dev_dependencies:
   flutter_test:
