--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -21,8 +21,8 @@ if (keystorePropertiesFile.exists()) {
 
 android {
     namespace = "com.jalnix.moortaalim"
-    compileSdk = flutter.compileSdkVersion
-    ndkVersion = flutter.ndkVersion
+    compileSdk = 35
+    ndkVersion = "28.0.13004108"
 
     compileOptions {
         sourceCompatibility = JavaVersion.VERSION_1_8
@@ -38,9 +38,9 @@ android {
         // You can update the following values to match your application needs.
         // For more information, see: https://flutter.dev/to/review-gradle-config.
         minSdk = 23
-        targetSdk = flutter.targetSdkVersion
-        versionCode = 4
-        versionName = "1.0.3"
+        targetSdk = 35
+        versionCode = 7
+        versionName = "1.0.6"
     }
     signingConfigs {
         release {
@@ -59,6 +59,12 @@ android {
             // TODO: Add your own signing config for the release build.
             // Signing with the debug keys for now, so `flutter run --release` works.
             signingConfig signingConfigs.release
+        }
+    }
+
+    packaging {
+        jniLibs {
+            useLegacyPackaging = false
         }
     }
 }
